--- a/.github/workflows/qmain.yml
+++ b/.github/workflows/qmain.yml
@@ -7,6 +7,7 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/workflows/issue.yml'
       - '**.md'
+  workflow_dispatch: {}
 
 jobs:
   build:
@@ -35,7 +36,7 @@ jobs:
           java-version: '21'
 
       - name: Write key
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/master'
+        if: ${{ github.ref == 'refs/heads/master' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch') }}
         run: |
           echo officialBuild=true >> local.properties
           echo buildWithGitSuffix=true >> local.properties
